--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -4,59 +4,62 @@
   font-weight: 100 900;
   src: url("./fonts/GeistVF.woff") format("woff");
 }
-$font-geist-sans: 'GeistSans';
 
-$bg: var(--bg);
-$fg: var(--fg-soft);
+/* All Themes */
+:root {
+  // Plush
+  --plush-bg: rgba(185, 172, 174, 1);
+  --plush-fg-soft: rgba(43, 36, 37, 0.6);
+  --plush-fg-hard: rgba(43, 36, 37, 0.87);
+  --plush-fg-contrast: rgba(90, 0, 0, 0.87);
+
+  // Sombre
+  --sombre-bg: rgba(43, 36, 37, 1);
+  --sombre-fg-soft: rgba(185, 172, 174, 0.6);
+  --sombre-fg-hard: rgba(185, 172, 174, 0.87);
+  --sombre-fg-contrast: rgba(255, 227, 181, 0.87);
+
+  // Brilliant
+  --brilliant-bg: rgba(229, 229, 229, 1);
+  --brilliant-fg-soft: rgba(18, 18, 18, 0.6);
+  --brilliant-fg-hard: rgba(18, 18, 18, 0.87);
+  --brilliant-fg-contrast: rgba(118, 97, 0, 0.87);
+
+  // Luminous
+  --luminous-bg: rgba(38, 38, 38, 1);
+  --luminous-fg-soft: rgba(229, 229, 229, 0.6);
+  --luminous-fg-hard: rgba(229, 229, 229, 0.87);
+  --luminous-fg-contrast: rgba(232, 224, 190, 0.87);
+}
 
 /* Light Accented Mode */
 :root[data-theme="plush"] {
-  --bg: rgba(185, 172, 174, 1);
-  --fg-soft: rgba(43, 36, 37, 0.6);
-  --fg-hard: rgba(43, 36, 37, 0.87);
-  --fg-contrast: rgba(90, 0, 0, 0.87);
-  
-  --tone-icon-color: rgba(90, 0, 0, 0.87);
-  --icon-color1: rgba(229, 229, 229, 1);
-  --icon-color2: rgba(18, 18, 18, 1);
-  --icon-color3: rgba(72, 168, 228, 1);
+  --bg: var(--plush-bg);
+  --fg-soft: var(--plush-fg-soft);
+  --fg-hard: var(--plush-fg-hard);
+  --fg-contrast: var(--plush-fg-contrast);
 }
 
 /* Dark Accented Mode */
 :root[data-theme="sombre"] {
-  --bg: rgba(43, 36, 37, 1);
-  --fg-soft: rgba(185, 172, 174, 0.6);
-  --fg-hard: rgba(185, 172, 174, 0.87);
-  --fg-contrast: rgba(255, 227, 181, 0.87);
-  
-  --tone-icon-color: rgba(255, 227, 181, 0.87);
-  --icon-color1: rgba(18, 18, 18, 1);
-  --icon-color2: rgba(229, 229, 229, 1);
-  --icon-color3: rgba(72, 168, 228, 1);
+  --bg: var(--sombre-bg);
+  --fg-soft: var(--sombre-fg-soft);
+  --fg-hard: var(--sombre-fg-hard);
+  --fg-contrast: var(--sombre-fg-contrast);
 }
 
 /* Light Colorful Mode */
 :root[data-theme="brilliant"] {
-  --bg: rgba(229, 229, 229, 1);
-  --fg-soft: rgba(18, 18, 18, 0.6);
-  --fg-hard: rgba(18, 18, 18, 0.87);
-  --fg-contrast: rgba(233, 223, 98, 0.87);
-  
-  --tone-icon-color: rgba(72, 168, 228, 0.87);
-  --icon-color1: rgba(43, 36, 37, 1);
-  --icon-color2: rgba(185, 172, 174, 1);
-  --icon-color3: rgba(90, 0, 0, 1);
+  --bg: var(--brilliant-bg);
+  --fg-soft: var(--brilliant-fg-soft);
+  --fg-hard: var(--brilliant-fg-hard);
+  --fg-contrast: var(--brilliant-fg-contrast);
 }
 
 /* Dark Colorful Mode */
 :root[data-theme="luminous"] {
-  --bg: rgba(18, 18, 18, 1);
-  --fg-soft: rgba(229, 229, 229, 0.6);
-  --fg-hard: rgba(229, 229, 229, 0.87);
-  --fg-contrast: rgba(72, 168, 228, 0.87);
-  
-  --tone-icon-color: rgba(233, 223, 98, 0.87);
-  --icon-color1: rgba(185, 172, 174, 1);
-  --icon-color2: rgba(43, 36, 37, 1);
-  --icon-color3: rgba(255, 227, 181, 1);
+  --bg: var(--luminous-bg);
+  --fg-soft: var(--luminous-fg-soft);
+  --fg-hard: var(--luminous-fg-hard);
+  --fg-contrast: var(--luminous-fg-contrast);
 }
