--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -106,3 +106,11 @@
 :root {
   transition: background-color 250ms ease-in-out, color 250ms ease-in-out, transform 250ms ease-in-out;
 }
+
+meta[name="theme-color"] {
+  content: var(--bg);
+}
+
+met[name="apple-mobile-web-app-status-bar-style"] {
+  content: var(--bg);
+}
