--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,13 +16,21 @@
   --brilliant-bg: rgba(229, 229, 229, 1);
   --brilliant-fg-soft: rgba(18, 18, 18, 0.6);
   --brilliant-fg-hard: rgba(18, 18, 18, 0.87);
-  --brilliant-fg-contrast: rgba(46, 125, 50, 0.87);
+  --brilliant-fg-contrast: rgb(204, 169, 27);
+
+  --brilliant-accent1: rgb(173, 57, 44, 1);
+  --brilliant-accent2: rgb(31, 146, 79, 1);
+  --brilliant-accent3: rgb(32, 106, 155, 1);
 
   // Luminous
   --luminous-bg: rgba(38, 38, 38, 1);
   --luminous-fg-soft: rgba(229, 229, 229, 0.6);
   --luminous-fg-hard: rgba(229, 229, 229, 0.87);
-  --luminous-fg-contrast: rgba(0, 229, 255, 0.87);
+  --luminous-fg-contrast: rgba(199, 184, 234, 1);
+
+  --luminous-accent1: rgba(255, 197, 197, 1);
+  --luminous-accent2: rgb(162, 231, 179, 1);
+  --luminous-accent3: rgba(173, 216, 230, 1);
 }
 
 /* Light Accented Mode */
@@ -31,6 +39,11 @@
   --fg-soft: var(--plush-fg-soft);
   --fg-hard: var(--plush-fg-hard);
   --fg-contrast: var(--plush-fg-contrast);
+
+  --tone-color: rgb(90, 0, 0);
+  --trefoil1: rgb(229, 229, 229);
+  --trefoil2: rgb(199, 184, 234);
+  --trefoil3: rgb(173, 57, 44);
 }
 
 /* Dark Accented Mode */
@@ -39,6 +52,11 @@
   --fg-soft: var(--sombre-fg-soft);
   --fg-hard: var(--sombre-fg-hard);
   --fg-contrast: var(--sombre-fg-contrast);
+
+  --tone-color: rgb(255, 227, 181);
+  --trefoil1: rgb(38, 38, 38);
+  --trefoil2: rgb(199, 184, 234);
+  --trefoil3: rgb(255, 197, 197);
 }
 
 /* Light Colorful Mode */
@@ -47,6 +65,11 @@
   --fg-soft: var(--brilliant-fg-soft);
   --fg-hard: var(--brilliant-fg-hard);
   --fg-contrast: var(--brilliant-fg-contrast);
+
+  --tone-color: rgb(199, 184, 234);
+  --trefoil1: rgb(185, 172, 174);
+  --trefoil2: rgb(43, 36, 37);
+  --trefoil3: rgb(90, 0, 0);
 }
 
 /* Dark Colorful Mode */
@@ -55,4 +78,9 @@
   --fg-soft: var(--luminous-fg-soft);
   --fg-hard: var(--luminous-fg-hard);
   --fg-contrast: var(--luminous-fg-contrast);
+
+  --tone-color: rgb(204, 169, 27);
+  --trefoil1: rgb(43, 36, 37);
+  --trefoil2: rgb(185, 172, 174);
+  --trefoil3: rgb(255, 227, 181);
 }
