Implemented tone icon animation

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -103,13 +103,9 @@
 }
 
 .trefoil-classes {
-  @apply absolute w-4 h-4 rounded-full transition-all duration-[250] ease-in-out transform -translate-x-1/2 -translate-y-1/2 hover:opacity-100;
+  @apply absolute w-4 h-4 rounded-full transition-all duration-[250ms] transform -translate-x-1/2 -translate-y-1/2 hover:opacity-100;
 }
 
-// Global transitions
-:root {
-  transition: background-color 250ms ease-in-out, color 250ms ease-in-out, transform 250ms ease-in-out;
-}
 
 meta[name="theme-color"] {
   content: var(--bg);
