--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -106,6 +106,10 @@
   @apply absolute w-4 h-4 rounded-full transition-all duration-[250ms] transform -translate-x-1/2 -translate-y-1/2 opacity-75 group-hover:opacity-100;
 }
 
+.header-link {
+  @apply text-fgSoft hover:text-fgContrast transition-colors duration-[250ms];
+}
+
 meta[name="theme-color"] {
   content: var(--bg);
 }
