--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,19 +4,19 @@
   --plush-bg: rgba(185, 172, 174, 1);
   --plush-fg-soft: rgba(43, 36, 37, 0.6);
   --plush-fg-hard: rgba(43, 36, 37, 0.87);
-  --plush-fg-contrast: rgba(90, 0, 0, 0.87);
+  --plush-fg-contrast: rgba(90, 0, 0, 1);
 
   // Sombre
   --sombre-bg: rgba(43, 36, 37, 1);
   --sombre-fg-soft: rgba(185, 172, 174, 0.6);
   --sombre-fg-hard: rgba(185, 172, 174, 0.87);
-  --sombre-fg-contrast: rgba(255, 227, 181, 0.87);
+  --sombre-fg-contrast: rgba(255, 227, 181, 1);
 
   // Brilliant
   --brilliant-bg: rgba(229, 229, 229, 1);
   --brilliant-fg-soft: rgba(18, 18, 18, 0.6);
   --brilliant-fg-hard: rgba(18, 18, 18, 0.87);
-  --brilliant-fg-contrast: rgb(17, 55, 80);
+  --brilliant-fg-contrast: rgba(17, 55, 80, 1);
 
   --brilliant-accent1: rgba(173, 57, 44, 1);
   --brilliant-accent2: rgba(31, 146, 79, 1);
@@ -40,10 +40,10 @@
   --fg-hard: var(--plush-fg-hard);
   --fg-contrast: var(--plush-fg-contrast);
 
-  --tone-color: rgba(255, 227, 181, 1);
+  --tone-color: var(--sombre-fg-contrast);
   --trefoil1: rgba(229, 229, 229, 1);
-  --trefoil2: rgba(206, 172, 39, 1);
-  --trefoil3: rgba(173, 57, 44, 1);
+  --trefoil2: var(--brilliant-fg-contrast);
+  --trefoil3: var(--brilliant-accent1);
 }
 
 /* Dark Accented Mode */
@@ -53,10 +53,10 @@
   --fg-hard: var(--sombre-fg-hard);
   --fg-contrast: var(--sombre-fg-contrast);
 
-  --tone-color: rgba(90, 0, 0, 1);
+  --tone-color: var(--plush-fg-contrast);
   --trefoil1: rgba(38, 38, 38, 1);
-  --trefoil2: rgba(199, 184, 234, 1);
-  --trefoil3: rgba(255, 197, 197, 1);
+  --trefoil2: var(--luminous-fg-contrast);
+  --trefoil3: var(--luminous-accent1);
 }
 
 /* Light Colorful Mode */
@@ -69,7 +69,7 @@
   --tone-color: var(--luminous-fg-contrast);
   --trefoil1: rgba(185, 172, 174, 1);
   --trefoil2: rgba(43, 36, 37, 1);
-  --trefoil3: rgba(90, 0, 0, 1);
+  --trefoil3: var(--plush-fg-contrast);
 }
 
 /* Dark Colorful Mode */
@@ -82,5 +82,5 @@
   --tone-color: var(--brilliant-fg-contrast);
   --trefoil1: rgba(43, 36, 37, 1);
   --trefoil2: rgba(185, 172, 174, 1);
-  --trefoil3: rgba(255, 227, 181, 1);
+  --trefoil3: var(--sombre-fg-contrast);
 }
