Changed scrollbar color

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -113,7 +113,6 @@
 .header-link {
   @apply text-fgHard text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms];
 }
-
 meta[name="theme-color"] {
   content: var(--bg);
 }
@@ -125,7 +124,7 @@ met[name="apple-mobile-web-app-status-bar-style"] {
 /* Scrollbar styles for Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--fg-soft) var(--bg);
+  scrollbar-color: var(--fg-hard) var(--bg);
 }
 
 /* Scrollbar styles for Webkit browsers (Chrome, Safari, newer versions of Edge) */
@@ -140,13 +139,13 @@ met[name="apple-mobile-web-app-status-bar-style"] {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--fg-soft);
+  background-color: var(--fg-hard);
   border-radius: 5px;
   border: 2px solid var(--bg);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--fg-soft);
+  background-color: var(--fg-hard);
   border: 1px solid var(--bg);
 }
 
@@ -157,10 +156,10 @@ met[name="apple-mobile-web-app-status-bar-style"] {
 /* For Internet Explorer and Edge (older versions) */
 body {
   -ms-overflow-style: scrollbar;
-  scrollbar-base-color: var(--fg-soft);
-  scrollbar-face-color: var(--fg-soft);
-  scrollbar-3dlight-color: var(--fg-soft);
-  scrollbar-highlight-color: var(--fg-soft);
+  scrollbar-base-color: var(--fg-hard);
+  scrollbar-face-color: var(--fg-hard);
+  scrollbar-3dlight-color: var(--fg-hard);
+  scrollbar-highlight-color: var(--fg-hard);
   scrollbar-track-color: var(--bg);
-  scrollbar-shadow-color: var(--fg-soft);
+  scrollbar-shadow-color: var(--fg-hard);
 }
