Added variable for content width

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -31,6 +31,8 @@
   --luminous-accent1: rgba(255, 197, 197, 1);
   --luminous-accent2: rgba(162, 231, 179, 1);
   --luminous-accent3: rgba(173, 216, 230, 1);
+
+  --kic-width: calc(100vw*0.42857142857);
 }
 
 /* Light Accented Mode */
