Added headshot and image effects

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -114,6 +114,12 @@
   @apply text-fgHard text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms];
 }
 
+.marker-arrow {
+  li::marker {
+    content: '➤ ';
+  }
+}
+
 meta[name="theme-color"] {
   content: var(--bg);
 }
