--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -114,6 +114,10 @@
   @apply text-fgHard text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms];
 }
 
+.image-effects {
+  @apply overflow-hidden shadow-black shadow-[0_0.5rem_0.5rem_-0.375rem] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.125rem] hover:-translate-y-[0.313rem] grayscale-[0.8] hover:grayscale-0 opacity-80 hover:opacity-100 hover:*:scale-105 transition duration-[250ms] *:transition *:duration-[250ms]
+}
+
 .marker-arrow {
   li::marker {
     content: '➤ ';
