Added kic-margin variable

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -33,6 +33,7 @@
   --luminous-accent3: rgba(173, 216, 230, 1);
 
   --kic-width: calc(100vw*0.42857142857);
+  --kic-margin: 20rem;
 }
 
 /* Light Accented Mode */
