--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -115,7 +115,7 @@
 }
 
 .image-effects {
-  @apply overflow-hidden shadow-black shadow-[0_0.5rem_0.5rem_-0.375rem] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.125rem] hover:-translate-y-[0.313rem] grayscale-[0.8] hover:grayscale-0 opacity-80 hover:opacity-100 hover:*:scale-105 transition duration-[250ms] *:transition *:duration-[250ms]
+  @apply overflow-hidden shadow-black shadow-[0_0.5rem_0.5rem_-0.375rem] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.125rem] hover:-translate-y-[0.313rem] grayscale-[0.8] hover:grayscale-0 opacity-80 hover:opacity-100 hover:*:scale-105 transition duration-[250ms] *:transition *:duration-[250ms] active:opacity-85;
 }
 
 .marker-arrow {
