--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -107,7 +107,7 @@
 }
 
 .theme-button-classes {
-  @apply relative flex items-center justify-center aspect-square w-10 md:w-12 h-auto cursor-pointer bg-fgSoft border-[0.2rem] border-fgSoft rounded-sm transition-all duration-[250ms] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.375rem] hover:-translate-y-1 hover:opacity-100 active:opacity-85
+  @apply relative flex items-center justify-center aspect-square w-10 md:w-12 h-auto cursor-pointer bg-fgSoft border-[0.1rem] border-fgHard rounded-sm transition-all duration-[250ms] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.375rem] hover:-translate-y-1 hover:opacity-100 active:opacity-85
 }
 
 .header-link {
@@ -119,10 +119,17 @@
 }
 
 .marker-arrow {
-  li::marker {
-    content: '➤ ';
-    font-size: 0.6rem;
+  li {
+    &::marker {
+      content: '♦';
+      color: var(--fg-contrast);
+    }
+    padding-inline-start: 0.75rem;
   }
+}
+
+.highlight {
+  @apply text-fgHard font-medium selection:bg-fgHard;
 }
 
 meta[name="theme-color"] {
@@ -133,51 +140,36 @@ met[name="apple-mobile-web-app-status-bar-style"] {
   content: var(--bg);
 }
 
-/* Scrollbar styles for Firefox */
-html {
-  scrollbar-width: thin;
-  scrollbar-color: var(--fg-soft) var(--bg);
+/* For browsers that support `scrollbar-*` properties */
+@supports (scrollbar-color: auto) {
+  .scrollbox {
+    scrollbar-color: var(--fg-soft) var(--bg);
+  }
 }
 
-/* Scrollbar styles for Webkit browsers (Chrome, Safari, newer versions of Edge) */
-::-webkit-scrollbar {
-  width: 0.5rem;
-}
+/* Otherwise, use `::-webkit-scrollbar-*` pseudo-elements */
+@supports selector(::-webkit-scrollbar) {
+  ::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+    transition: all 0.25s ease;
+  }
 
-::-webkit-scrollbar:hover {
-  width: 1rem;
-  height: 1rem;
-}
+  ::-webkit-scrollbar-track {
+    background: var(--bg);
+  }
 
-::-webkit-scrollbar-track {
-  background: var(--bg);
-  border-radius: 0.5rem;
-}
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--fg-soft);
+    border-radius: 0.125rem;
+    border: 0rem solid var(--fg-soft);
+  }
 
-::-webkit-scrollbar-thumb {
-  background-color: var(--fg-soft);
-  border-radius: 0.3125rem;
-  border: 0.125rem solid var(--bg);
-}
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--fg-soft);
+  }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--fg-soft);
-  border: 0.0625rem solid var(--bg);
-}
-
-::-webkit-scrollbar-thumb:active {
-  background-color: var(--fg-hard);
-}
-
-/* For Internet Explorer and Edge (older versions) */
-body {
-  -ms-overflow-style: scrollbar;
-  scrollbar-base-color: var(--fg-soft);
-  scrollbar-face-color: var(--fg-soft);
-  scrollbar-3dlight-color: var(--fg-soft);
-  scrollbar-highlight-color: var(--fg-soft);
-  scrollbar-track-color: var(--bg);
-  scrollbar-shadow-color: var(--fg-soft);
-
-  background-color: var(--bg);
+  ::-webkit-scrollbar-thumb:active {
+    background-color: var(--fg-hard);
+  }
 }
