Overhaul #2: setup up header, theme switcher, and business card. About, experience, works need finished.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -127,7 +127,7 @@ h6 {
 }
 
 .header-link {
-  @apply text-fgHard text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms];
+  @apply text-fgSoft text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms];
 }
 
 
