--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -119,11 +119,11 @@ h6 {
 }
 
 .trefoil-classes {
-  @apply absolute aspect-square w-3 md:w-4 h-auto rounded-full transition-all duration-[250ms] transform -translate-x-1/2 -translate-y-1/2 group-hover:opacity-100;
+  @apply absolute aspect-square w-3 lg:w-4 h-auto rounded-full transition-all duration-[250ms] transform -translate-x-1/2 -translate-y-1/2 group-hover:opacity-100;
 }
 
 .theme-button-classes {
-  @apply relative flex items-center justify-center aspect-square w-10 md:w-12 h-auto cursor-pointer bg-fgSoft border-[0.1rem] border-fgHard rounded-sm transition-all duration-[250ms] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.375rem] hover:-translate-y-1 hover:opacity-100 active:opacity-85
+  @apply relative flex items-center justify-center aspect-square w-10 lg:w-12 h-auto cursor-pointer bg-fgSoft border-[0.1rem] border-fgHard rounded-sm transition-all duration-[250ms] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.375rem] hover:-translate-y-1 hover:opacity-100 active:opacity-85
 }
 
 .header-link {
