--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -114,20 +114,8 @@ h6 {
   }
 }
 
-.selection-default > * {
-  @apply selection:bg-fgSoft selection:text-bg;
-}
-
-.trefoil-classes {
-  @apply absolute aspect-square w-3 lg:w-4 h-auto rounded-full transition-all duration-[250ms] transform -translate-x-1/2 -translate-y-1/2 group-hover:opacity-100;
-}
-
-.theme-button-classes {
-  @apply relative flex items-center justify-center aspect-square w-10 lg:w-12 h-auto cursor-pointer bg-fgSoft border-[0.1rem] border-fgHard rounded-sm transition-all duration-[250ms] hover:shadow-black hover:shadow-[0_0.5rem_0.5rem_-0.375rem] hover:-translate-y-1 hover:opacity-100 active:opacity-85
-}
-
 .header-link {
-  @apply text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms];
+  @apply text-[1rem] font-ibm-plex-sans font-semibold hover:text-fgContrast hover:selection:bg-fgContrast transition-all duration-[250ms] !important;
 }
 
 .marker-arrow {
@@ -141,11 +129,11 @@ h6 {
 }
 
 .highlight {
-  @apply text-fgHard font-medium selection:bg-fgHard;
+  @apply text-fgHard font-medium selection:bg-fgHard !important;
 }
 
 .text-link {
-  @apply text-fgContrast font-medium selection:bg-fgContrast hover:opacity-75 transition duration-[250ms];
+  @apply text-fgContrast font-medium selection:bg-fgContrast hover:opacity-75 transition duration-[250ms] !important;
 }
 
 meta[name="theme-color"] {
