Changed kic-width to increase size of main content on large screens when horizontally sizing down

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,7 +24,7 @@
   --luminous-fg-hard: rgb(229,229,229);
   --luminous-fg-contrast: rgb(204,183,254);
 
-  --kic-width: calc(100vw*0.428571429);
+  --kic-width: max(calc(100vw*0.428571429), 40rem);
 }
 
 /* Light Accented Mode */
