--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,33 +1,42 @@
-/* All Themes */
+/**
+ * Theme Color Variables
+ * Defines color palettes for all theme variants
+ */
 :root {
-  // Plush
+  // Plush - Light subdued theme
   --plush-bg: rgb(185,172,174);
   --plush-fg-soft: rgb(86,73,75);
   --plush-fg-hard: rgb(43,36,37);
   --plush-fg-contrast: rgb(90,0,0);
 
-  // Sombre
+  // Sombre - Dark subdued theme
   --sombre-bg: rgb(43,36,37);
   --sombre-fg-soft: rgb(150,132,135);
   --sombre-fg-hard: rgb(185,172,174);
   --sombre-fg-contrast: rgb(255,227,181);
 
-  // Brilliant
+  // Brilliant - Light colorful theme
   --brilliant-bg: rgb(229,229,229);
   --brilliant-fg-soft: rgb(81,81,81);
   --brilliant-fg-hard: rgb(18,18,18);
   --brilliant-fg-contrast: rgb(180,98,123);
 
-  // Luminous
+  // Luminous - Dark colorful theme
   --luminous-bg: rgb(38,38,38);
   --luminous-fg-soft: rgb(174,174,174);
   --luminous-fg-hard: rgb(229,229,229);
   --luminous-fg-contrast: rgb(204,183,254);
 
+  // Layout Constants
   --kic-width: max(calc(100vw*0.428571429), 40rem);
 }
 
-/* Light Accented Mode */
+/**
+ * Theme Applications
+ * Maps theme variables to CSS custom properties
+ */
+
+/* Light Subdued Theme */
 :root[data-theme="plush"] {
   --bg: var(--plush-bg);
   --fg-soft: var(--plush-fg-soft);
@@ -35,7 +44,7 @@
   --fg-contrast: var(--plush-fg-contrast);
 }
 
-/* Dark Accented Mode */
+/* Dark Subdued Theme */
 :root[data-theme="sombre"] {
   --bg: var(--sombre-bg);
   --fg-soft: var(--sombre-fg-soft);
@@ -43,7 +52,7 @@
   --fg-contrast: var(--sombre-fg-contrast);
 }
 
-/* Light Colorful Mode */
+/* Light Colorful Theme */
 :root[data-theme="brilliant"] {
   --bg: var(--brilliant-bg);
   --fg-soft: var(--brilliant-fg-soft);
@@ -51,7 +60,7 @@
   --fg-contrast: var(--brilliant-fg-contrast);
 }
 
-/* Dark Colorful Mode */
+/* Dark Colorful Theme */
 :root[data-theme="luminous"] {
   --bg: var(--luminous-bg);
   --fg-soft: var(--luminous-fg-soft);
