Added item card background variable properties

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -29,6 +29,11 @@
 
   // Layout Constants
   --kic-width: max(calc(100vw*0.428571429), 40rem);
+
+  // Item Card Background
+  --item-card-bg: rgba(0, 0, 0, 0.2);
+  --item-card-bg-hover: rgba(0, 0, 0, 0.4);
+
 }
 
 /**
