--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -31,8 +31,10 @@
   --kic-width: max(calc(100vw*0.428571429), 40rem);
 
   // Item Card Background
-  --item-card-bg: rgba(0, 0, 0, 0.2);
-  --item-card-bg-hover: rgba(0, 0, 0, 0.4);
+  --item-card-bg-dark: rgba(0, 0, 0, 0.2);
+  --item-card-bg-hover-dark: rgba(0, 0, 0, 0.4);
+  --item-card-bg-light: rgba(255, 255, 255, 0.2);
+  --item-card-bg-hover-light: rgba(255, 255, 255, 0.4);
 
 }
 
